Add matrix based on spark version

--- a/.github/workflows/build-ci-image.yaml
+++ b/.github/workflows/build-ci-image.yaml
@@ -18,6 +18,9 @@ name: 'Build CI images'
 on: 
   push:
     branches: ["main", "feature/github-actions"]
+    # Commented out until PR is ready
+    # paths:
+    # - 'dev/docker/Dockerfile'
 jobs:
   docker-build:
     runs-on: ubuntu-latest
