--- a/.github/workflows/build-ci-image.yaml
+++ b/.github/workflows/build-ci-image.yaml
@@ -17,10 +17,9 @@
 name: 'Build CI images'
 on: 
   push:
-    branches: ["main", "feature/github-actions"]
-    # Commented out until PR is ready
-    # paths:
-    # - 'dev/docker/Dockerfile'
+    branches: ["main"]
+    paths:
+    - 'dev/docker/Dockerfile'
 jobs:
   docker-build:
     runs-on: ubuntu-latest
