--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -47,3 +47,6 @@ jobs:
     - 
       name: Build with Maven
       run: mvn -Pthriftserver ${{ env.mvn_profile }} -DskipITs -Dmaven.javadoc.skip=true -B -V -e verify
+    -
+      name: Upload coverage to codecov
+      uses: codecov/codecov-action@v3
