--- a/dev/docker/Dockerfile
+++ b/dev/docker/Dockerfile
@@ -1,73 +1,48 @@
-#
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
-#
-#    http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
+# Set the base image to Ubuntu
+FROM ubuntu:latest
 
-FROM ubuntu:xenial
+# Install dependencies
+RUN apt-get update && \
+    apt-get install -y openjdk-8-jdk wget curl unzip && \
+    rm -rf /var/lib/apt/lists/*
 
-# configure locale
-RUN apt-get update -qq > /dev/null && apt-get install -qq --yes --no-install-recommends \
-    locales && \
-    locale-gen en_US.UTF-8
-ENV LANG="en_US.UTF-8" \
-    LANGUAGE="en_US.UTF-8" \
-    LC_ALL="en_US.UTF-8"
+# Set environment variables
+ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+ENV SPARK_VERSION=2.4.5
+ENV HADOOP_VERSION=2.7
+ENV LIVY_VERSION=0.7.1-incubating
 
-# Install necessary dependencies for build/test
-RUN apt-get install -qq \
-    apt-transport-https \
-    curl \
-    git \
-    libkrb5-dev \
-    maven \
-    openjdk-8-jdk \
-    python-dev \
-    python-pip \
-    python3-pip \
-    software-properties-common \
-    vim \
-    wget
+# Download and install Spark
+RUN set -eux; \
+    url="https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz"; \
+    filename="$(basename "$url")"; \
+    wget --progress=bar:force:noscroll -O "$filename" "$url"; \
+    tar xzf "$filename" -C /opt/; \
+    rm "$filename"; \
+    mv "/opt/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}" /opt/spark
 
-# R 3.x install - ensure to add the signing key per https://cran.r-project.org/bin/linux/ubuntu/olderreleasesREADME.html
-RUN add-apt-repository 'deb https://cloud.r-project.org/bin/linux/ubuntu xenial-cran35/' && \
-    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9 && \
-    apt-get update && \
-    apt-get -qq install r-base
+# Download and install Livy
+RUN set -eux; \
+    url="https://archive.apache.org/dist/incubator/livy/${LIVY_VERSION}/apache-livy-${LIVY_VERSION}-bin.zip"; \
+    filename="$(basename "$url")"; \
+    wget --progress=bar:force:noscroll -O "$filename" "$url"; \
+    unzip "$filename"; \
+    rm "$filename"; \
+    mv "apache-livy-${LIVY_VERSION}-bin" /opt/livy
 
-# Add build dependencies for python2
-# - First we upgrade pip because that makes a lot of things better
-# - Then we remove the provided version of setuptools and install a different version
-# - Then we install additional dependencies
-RUN python -m pip install -U "pip < 21.0" && \
-	apt-get remove -y python-setuptools && \
-	python -m pip install "setuptools < 36" && \
-	python -m pip install \
-        cloudpickle \
-        codecov \
-        flake8 \
-        flaky \
-        "future>=0.15.2" \
-        "futures>=3.0.5" \
-        pytest \
-        pytest-runner \
-        requests-kerberos \
-        "requests >= 2.10.0" \
-        "responses >= 0.5.1"
+# Configure Livy
+ENV SPARK_HOME=/opt/spark
+ENV PATH=$PATH:$SPARK_HOME/bin
+RUN cp /opt/livy/conf/log4j.properties.template /opt/livy/conf/log4j.properties
+RUN mkdir -p /opt/livy/logs
+RUN apt-get update && \
+    apt-get install -y scala
+ENV PATH="/opt/scala/bin:${PATH}"
 
-# Now do the same for python3
-RUN python3 -m pip install -U pip
+COPY log4j.properties /opt/livy/conf/
+RUN chmod 644 /opt/livy/conf/log4j.properties
 
-WORKDIR /workspace
-# https://archive.apache.org/dist/spark/spark-2.4.5/spark-2.4.5-bin-hadoop2.7.tgz
+# Expose ports
+EXPOSE 8998 5005
+# Start Livy
+CMD ["/opt/livy/bin/livy-server"]
