--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -25,8 +25,10 @@ jobs:
     container: ghcr.io/${{ github.repository_owner }}/livy-ci:latest
     strategy:
       matrix:
-        spark_version: ["2.4", "3.0"]
-        scala_version: ["2.11.12", "2.12.10"]
+        maven_profile:
+        - "-Pscala-2.11 -Pspark2"
+        - "-Pscala-2.12 -Pspark2"
+        - "-Pscala-2.12 -Pspark3"
     steps:
     - 
       name: Checkout
@@ -41,15 +43,9 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml', '*/pom.xml', 'thriftserver/*/pom.xml', 'core/*/pom.xml', 'repl/*/pom.xml', 'scala-api/*/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    -
-      name: Set profile based on matrix
-      run: |
-        SCALA_PROFILE_SUFFIX=$(echo "${{ matrix.scala_version }}" | cut -f1-2 -d\.)
-        SPARK_PROFILE_SUFFIX=$(echo "${{ matrix.spark_version }}" | cut -f1 -d\.)
-        echo "mvn_profile=-Pspark${SPARK_PROFILE_SUFFIX} -Pscala-${SCALA_PROFILE_SUFFIX}" >> $GITHUB_ENV
     - 
       name: Build with Maven
-      run: mvn -Pthriftserver ${{ env.mvn_profile }} -DskipITs -Dmaven.javadoc.skip=true -B -V -e verify
+      run: mvn -Pthriftserver ${{ matrix.mvn_profile }} -DskipITs -Dmaven.javadoc.skip=true -B -V -e verify
     -
       name: Upload coverage to codecov
       uses: codecov/codecov-action@v3
