--- a/.travis.yml
+++ b/.travis.yml
@@ -33,12 +33,7 @@ matrix:
   - name: "Spark 2.4 ITs (Scala 2.12)"
     scala: 2.12.10
     env: MVN_FLAG='-Pscala-2.12 -Pspark2 -Pthriftserver -DskipTests'
-  - name: "Spark 3.0 Unit Tests (Scala 2.11)"
-    scala: 2.11.12
-    env: MVN_FLAG='-Pscala-2.11 -Pspark3 -Pthriftserver -DskipITs'
-  - name: "Spark 3.0 ITs (Scala 2.11)"
-    scala: 2.11.12
-    env: MVN_FLAG='-Pscala-2.11 -Pspark3 -Pthriftserver -DskipITs'
+# No scala 2.11.x build for spark3
   - name: "Spark 3.0 Unit Tests (Scala 2.12)"
     scala: 2.12.10
     env: MVN_FLAG='-Pscala-2.12 -Pspark3 -Pthriftserver -DskipITs'
