--- a/docs/_data/project.yml
+++ b/docs/_data/project.yml
@@ -16,6 +16,6 @@
 # Apache Project configurations
 #
 name: Apache Livy
-version: 0.8.0-incubating
+version: 0.8.1-incubating-SNAPSHOT
 
 podling: true
