Add missing livy.server.launch.kerberos.* properties to default livy.conf

--- a/conf/livy.conf.template
+++ b/conf/livy.conf.template
@@ -183,6 +183,12 @@
 # livy.server.auth.kerberos.keytab = <spnego keytab>
 # livy.server.auth.kerberos.name-rules = DEFAULT
 #
+# Principal and keytab for Livy server.
+# livy.server.launch.kerberos.principal = <livy principal>
+# livy.server.launch.kerberos.keytab = <livy keytab>
+# livy.server.launch.kerberos.refresh-interval = 1h
+# livy.server.launch.kerberos.kinit-fail-threshold = 5
+#
 # If user wants to use custom authentication filter, configurations are:
 # livy.server.auth.type = <custom>
 # livy.server.auth.<custom>.class = <class of custom auth filter>
