--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -100,6 +100,10 @@
       <artifactId>hadoop-common</artifactId>
       <classifier>tests</classifier>
       <exclusions>
+          <exclusion>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+          </exclusion>
         <exclusion>
           <groupId>org.apache.curator</groupId>
           <artifactId>curator-client</artifactId>
