--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -114,6 +114,11 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-hdfs</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-hdfs</artifactId>
       <classifier>tests</classifier>
     </dependency>
 
