--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -31,6 +31,11 @@ jobs:
         maven_profile:
         - "-Pscala-2.11 -Pspark2 -DskipRTests"
         - "-Pscala-2.12 -Pspark3"
+        jdk_path:
+        - "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java"
+        include:
+        - maven_profile: "-Pscala-2.12 -Pspark3"
+          jdk_path: "/usr/lib/jvm/java-17-openjdk-amd64/bin/java"
     steps:
     - 
       name: Checkout
@@ -50,6 +55,9 @@ jobs:
       if: ${{ contains(matrix.maven_profile, 'spark3') }}
       # This can be removed once support for Python 2 and Spark 2 is removed and the default python executable is python3
       run: pyenv global 3 && echo "PYSPARK_PYTHON=$(which python3)" >> "$GITHUB_ENV"
+    -
+      name: Set JDK version
+      run: update-alternatives --set java ${{ matrix.jdk_path }}
     - 
       name: Build with Maven
       run: mvn -Pthriftserver ${{ matrix.maven_profile }} -DskipTests -Dmaven.javadoc.skip=true -B -V -e verify
